[tool.poetry]
name = "serialize-marshal-data"
version = "0.1.0"
description = ""
authors = ["CristiPV <cristi.valentin29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
